--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+    @font-face {
+        font-family: 'designerregular';
+        src: url('./fonts/designer/designer-webfont.woff2') format('woff2'),
+             url('./fonts/designer/designer-webfont.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+
