correct main title behaviour(text sizing). Add content for schoolpath en correct the design for this section who change order with screen width

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,13 @@
 *{
     scroll-behavior: smooth;
 }
+
+.diplomes::before{
+    content: "\2611";
+}
+
+@media(min-width: 1023px) {
+    .diplomes::before{
+        content: "\21D2"
+    }
+}
