--- a/src/index.css
+++ b/src/index.css
@@ -73,74 +73,30 @@
     }
 
 
-    .reveal{
-        opacity: 0;
-        transform: translateY(50px);
-    }
-
-    .reveal-minus-x{
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-
-    .reveal-x{
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-
-    .reveal-visible{
-        opacity: 1;
-        transform: translateY(0);
-        transition: 1s cubic-bezier(.7,.17,.48,.97);
-    }
-
-    .reveal-dropdown{
-        visibility: hidden;
-        opacity: 0;
-        transform: translateY(-50%);
-        transition: opacity 1s cubic-bezier(.7,.17,.48,.97), transform 1s cubic-bezier(.7,.17,.48,.97);
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-    }
-    .reveal-dropdown-open{
-        visibility: visible;
-        opacity: 1;
-        transform: translateY(0);
-        transition: opacity 1s cubic-bezier(.7,.17,.48,.97), transform 1s cubic-bezier(.7,.17,.48,.97);
-    }
-
-
 
     .appearFromRight{
         opacity: 0;
-        transform: translateX(100px);
+        transform: translate(100px, 0);
     }
 
     .appearFromLeft{
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translate(-100px, 0);
     }
 
     .appearFromTop{
         opacity: 0;
-        transform: translateY(100px);
+        transform: translate(0px, -100px);
     }
 
-    .appearFromBottom{
+    .appearFromBottom {
         opacity: 0;
-        transform: translateY(-100px);
+        transform: translate(0px, 100px);
     }
 
-    .appearX{
-        opacity: 1;
-        transform: translateX(0);
-        transition: 1.5s cubic-bezier(.7,.17,.48,.97);
-    }
 
-    .appearY{
+    .appear{
         opacity: 1;
-        transform: translateY(0);
-        transition: 1.5s cubic-bezier(.7,.17,.48,.97);
+        transform: translate(0, 0);
+        transition: 1.2s cubic-bezier(.7,.17,.48,.97);
     }
